# yew_boostrap

./: Cargo.toml  README.md  index.html  test.html
src/: lib.rs
src/components/group/: custom_form.rs  login.rs  mod.rs  navbar.rs
src/components/singular/: button.rs  main_title.rs  mod.rs  text_input.rs
