[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
gloo-net = "0.5.0"
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
stylist = { version = "0.13.0", features = ["yew"] }
wasm-bindgen = { version = "0.2.89", features = ["serde_json"] }
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.66", features = ["EventTarget", "HtmlInputElement"] }
# Dev version change it to prod when ready
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew-router = "0.18.0"
